[workspace]
resolver = "2"
members = ["hello_server", "ruok"]

[workspace.dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
log = "0.4.26"
pretty_env_logger = "0.5.0"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
] }
